--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
     <div class="botones">
       <div class="botones__contenedor">
-        <button class="botones__boton">Nuevo Juego</button>
-        <button class="botones__boton">Pedir carta</button>
-        <button class="botones__boton">Detener</button>
+        <button id="btnNuevo" class="botones__boton">Nuevo Juego</button>
+        <button id="btnPedir" class="botones__boton">Pedir carta</button>
+        <button id="btnDeter" class="botones__boton">Detener</button>
       </div>
     </div>
 
