--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="botones__contenedor">
         <button id="btnNuevo" class="botones__boton">Nuevo Juego</button>
         <button id="btnPedir" class="botones__boton">Pedir carta</button>
-        <button id="btnDeter" class="botones__boton">Detener</button>
+        <button id="btnStop" class="botones__boton">Detener</button>
       </div>
     </div>
 
@@ -33,7 +33,7 @@
         <div class="jugador mt-5">
           <h2 class="jugador__heading">Jugador 1 - <small>0</small></h2>
           <div id="jugador__cartas">
-            <img src="assets/cartas/2C.png" class="carta" alt="imagen carta" />
+            <!-- <img src="assets/cartas/2C.png" class="carta" alt="imagen carta" /> -->
             <!-- <img src="assets/cartas/2C.png" class="carta" alt="imagen carta" /> -->
             <!-- <img src="assets/cartas/2C.png" class="carta" alt="imagen carta" /> -->
             <!-- <img src="assets/cartas/2C.png" class="carta" alt="imagen carta" /> -->
@@ -43,7 +43,7 @@
         <div class="computadora mt-5">
           <h2 class="computadora__heading">Computadora 1 - <small>0</small></h2>
           <div id="computadora__cartas">
-            <img src="assets/cartas/10C.png" class="carta" alt="imagen carta" />
+            <!-- <img src="assets/cartas/10C.png" class="carta" alt="imagen carta" /> -->
             <!-- <img src="assets/cartas/10C.png" class="carta" alt="imagen carta" /> -->
             <!-- <img src="assets/cartas/10C.png" class="carta" alt="imagen carta" /> -->
             <!-- <img src="assets/cartas/10C.png" class="carta" alt="imagen carta" /> -->
